Added Icon, added regular windows forms borders again, fixed multiple files rag and drop to paylist, fixed a gate so only .mp3-files gets added currently. added psd source files in resources. added releas build.

--- a/TBaudioPlayer.csproj
+++ b/TBaudioPlayer.csproj
@@ -51,6 +51,9 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Resources\403514142759307247.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="irrKlang.NET4">
       <HintPath>..\..\..\..\..\Downloads\irrKlang-64bit-1.5.0\bin\dotnet-4-64\irrKlang.NET4.dll</HintPath>
@@ -115,6 +118,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\trackBarOn.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\403514142759307247.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\btnPlay.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
